--- a/style.css
+++ b/style.css
@@ -1,5 +1,195 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Mozilla+Headline:wght@200..700&family=Winky+Rough:ital,wght@0,300..900;1,300..900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body{
+    width: 100%;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+}
+
+.container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    /* padding: 10px; */
+}
+
+.navbar{
+    width: 100%;
+    padding: 20px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    /* background-color: red; */
+}
+
+.navbar nav{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.navbar nav h1{
+    font-size: 1.7em;
+    color: #000;
+    font-weight: 700;
+    text-decoration: none;
+    text-transform: capitalize;
+    font-family: "Winky Rough", sans-serif;
+}
+
+.navbar nav .right{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 35px;
+}
+
+.navbar nav .right ul{
+    display: flex;
+    align-items: center;
+    list-style: none;
+    gap: 25px;
+}
+
+.navbar nav .right ul li{
+    font-size: 1em;
+    font-weight: 600;
+    font-family: "Lato", sans-serif;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.navbar nav .right ul li i{
+    font-size: 1.5em;
+    color: #000;
+}
+
+.navbar nav .right i{
+    font-size: 1.5em;
+    color: #000;
+    cursor: pointer;
+}
+
+.top{
+    width: 100%;
+    padding: 20px 10px;
+    max-width: 1300px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    background-color: red;
+    /* justify-content: ; */
+}
+
+.left{
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+}
+
+.card{
+    position: relative;
+    max-width: 400px;
+    width: 100%;
+    background-color: rgb(0, 44, 241);
+    border-radius: 15px;
+    border: none;
+    outline: none;
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
+    padding: 15px;
+}
+
+.card .income{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.card .income .incomes{
+    font-size: .8em;
+    font-family: "Mozilla Headline", sans-serif;
+    font-weight: 700;
+    color: #fff;
+    letter-spacing: 1px;
+}
+
+.card .income .span{
+    font-size: .5em;
+    font-family: "lato", sans-serif;
+    opacity: 50%;
+    color: #fff;
+}
+
+.card .income-ex{
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    /* justify-content: center; */
+}
+
+.card .income-ex h1{
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    /* justify-content: center; */
+    /* background-color: red; */
+    gap: 3px;
+}
+
+.card .income-ex .exp{
+    font-size: .4em;
+    font-family: "lato", sans-serif;
+    opacity: 70%;
+    color: #fff;
+    font-weight: 400;
+    letter-spacing: 2px;
+}
+
+.card .income-ex .money{
+    font-size: .6em;
+    font-family: "lato", sans-serif;
+    font-weight: 600;
+    color: #fff;
+    letter-spacing: 1px;
+}
+
+.card p{
+    position: absolute;
+    font-size: .9em;
+    color: #000000;
+    font-family: "Mozilla Headline", sans-serif;
+    top: 10px;
+    right: 20px;
+    opacity: 70%;
+}
+
+.card button{
+    position: absolute;
+    bottom: 12px;
+    right: 20px;
+    padding: 12px 20px;
+    background-color: rgb(6, 143, 6);
+    color: #fff;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-size: 1em;
+    font-weight: 700;
+    font-family: "Lato", sans-serif;
 }
