--- a/style.css
+++ b/style.css
@@ -83,12 +83,12 @@ body{
 
 .top{
     width: 100%;
-    padding: 20px 10px;
+    padding: 40px 10px 20px 10px;
     max-width: 1300px;
     margin: 0 auto;
     display: flex;
     align-items: center;
-    background-color: red;
+    /* background-color: red; */
     /* justify-content: ; */
 }
 
@@ -102,7 +102,8 @@ body{
 
 .card{
     position: relative;
-    max-width: 400px;
+    max-width: 450px;
+    min-width: 300px;
     width: 100%;
     background-color: rgb(0, 44, 241);
     border-radius: 15px;
@@ -110,7 +111,7 @@ body{
     outline: none;
     display: flex;
     flex-direction: column;
-    gap: 100px;
+    gap: 120px;
     padding: 15px;
 }
 
@@ -171,10 +172,10 @@ body{
 .card p{
     position: absolute;
     font-size: .9em;
-    color: #000000;
+    color: #000000a8;
     font-family: "Mozilla Headline", sans-serif;
-    top: 10px;
-    right: 20px;
+    top: 20px;
+    right: 25px;
     opacity: 70%;
 }
 
@@ -192,4 +193,25 @@ body{
     font-size: 1em;
     font-weight: 700;
     font-family: "Lato", sans-serif;
+}
+
+.chart{
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+}
+
+.chart h1{
+    font-size: 1.5em;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-transform: capitalize;
+}
+
+.chart img{
+    width: 90%;
+    height: auto;
+    max-height: 280px;
 }
