--- a/style.css
+++ b/style.css
@@ -74,6 +74,11 @@ body{
     transition: background 0.3s ease-in-out;
 }
 
+.navbar nav .right ul li a{
+    text-decoration: none;
+    color: #000;
+}
+
 .navbar nav .right ul li i{
     font-size: 1.5em;
     color: #000;
