--- a/style.css
+++ b/style.css
@@ -411,3 +411,22 @@ body{
     color: #fff;
     font-family: "lato", sans-serif;
 }
+
+footer{
+    width: 100%;
+    background-color: rgb(73, 25, 204);
+}
+
+footer .foot{
+    width: 100%;
+    max-width: 1200px;
+    padding: 10px;
+    margin: 0 auto;
+}
+
+footer .foot h1{
+    font-size: 1em;
+    color: #fff;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
+}
