--- a/style.css
+++ b/style.css
@@ -20,7 +20,20 @@ body{
     height: 100%;
     display: flex;
     flex-direction: column;
+    position: relative;
     /* padding: 10px; */
+}
+
+.overlay{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(49, 49, 49, 0.801);
+    backdrop-filter: blur(08px);
+    z-index: 98;
+    display: none;
 }
 
 .navbar{
@@ -31,6 +44,7 @@ body{
     justify-content: center;
     max-width: 1200px;
     margin: 0 auto;
+    /* z-index: 100; */
     /* background-color: red; */
 }
 
@@ -54,7 +68,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 40px;
+    gap: 20px;
 }
 
 .navbar nav .right ul{
@@ -90,6 +104,10 @@ body{
     cursor: pointer;
 }
 
+.navbar nav .right i.fa-bars{
+    display: none;
+}
+
 .navbar nav .right ul .active::after{
     content: '';
     background-color: rgb(0, 44, 241);
@@ -117,6 +135,39 @@ body{
     bottom: 0px;
     left: 0;
     height: 2px;
+}
+
+@media (max-width: 550px) {
+    .navbar nav .right ul{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        list-style: none;
+        gap: 10px;
+        position: absolute;
+        background-color: #ffffff;
+        top: 65px;
+        right: 0;
+        width: 50%;
+        padding: 20px 0;
+        height: 93vh;
+        z-index: 99;
+        border-top-left-radius: 12px;
+        display: none;
+    }
+
+    .navbar nav .right i.fa-bars{
+        display: inline-block;
+    }
+
+    /* .navbar nav .right ul li a{
+        color: #fff;
+    } */
+
+    .navbar nav .right ul li{
+        font-size: 1.2em;
+    }
+
 }
 
 .top{
