--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
     display: flex;
     flex-direction: column;
     position: relative;
-    /* padding: 10px; */
+    padding: 10px;
 }
 
 .overlay{
@@ -279,6 +279,158 @@ body{
     max-height: 200px;
 }
 
+.quick{
+    width: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #3333336b;
+    border-radius: 10px;
+}
+
+.quick .header{
+    width: 100%;
+    border-bottom: 1px solid #3333336b;
+    padding: 10px;
+}
+
+.quick .header h1{
+    font-size: clamp(16px, 2vw, 1.3em);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700px;
+}
+
+.quick .access{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 30px;
+}
+
+.quick .access .accesses{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    background-color: #fff;
+    box-shadow: 2px 2px 10px #00000015;
+    padding: 10px 18px;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.quick .access .accesses:hover{
+    transform: scale(1.03);
+}
+
+.quick .access .accesses i{
+    font-size: clamp(15px, 2vw, 1em);
+    padding: 10px;
+    background-color: rgba(25, 73, 231, 0.568);
+    border-radius: 50%;
+}
+
+.quick .access .accesses h1{
+    font-size: clamp(15px, 2vw, 1em);
+    font-family: "quicksand", sans-serif;
+    font-weight: 600;
+}
+
+.transactions{
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 30px;
+}
+
+.transactions h1{
+    font-size: clamp(18px, 2vw, 1.5em);
+    font-family: "Istok web", sans-serif;
+    font-weight: 700px;
+}
+
+.all{
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+}
+
+.all .all-line{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.all .all-line .info{
+    width: 100%;
+    background-color: rgba(0, 0, 255, 0.068);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px;
+    border-radius: 8px;
+}
+
+.all .all-line .info .mouse{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.all .all-line .info .mouse i{
+    font-size: clamp(15px, 2vw, 1em);
+    padding: 10px;
+    background-color: #fff;
+    border-radius: 50%;
+}
+
+.all .all-line .info .mouse h1{
+    font-size: clamp(16px, 2vw, 1.1em);
+    font-family: "quicksand", sans-serif;
+}
+
+.all .all-line .info h2{
+    font-size: clamp(16px, 2vw, 1.1em);
+    font-weight: 900;
+    font-family: "quicksand", sans-serif;
+
+}
+
+.all .all-line .details{
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    gap: 10px;
+    background-color: rgba(35, 68, 216, 0.938);
+    padding: 12px;
+    border-radius: 8px;
+    transition: all 0.3s ease;
+}
+
+.all .all-line .details:hover{
+    transform: scale(1.03);
+}
+
+.all .all-line .details i{
+    padding: 10px;
+    font-size: 1em;
+    background-color: #fff;
+    border-radius: 50%;
+}
+
+.all .all-line .details p{
+    font-size: 1em;
+    color: #fff;
+    font-family: "lato", sans-serif;
+}
+
 @media (max-width: 550px) {
     .navbar nav .right ul{
         display: flex;
@@ -322,158 +474,14 @@ body{
         display: none;
     }
 
-}
+    .quick .access .accesses{
+        flex-direction: column;
+        padding: 10px 10px;
+        /* width: 100%; */
+        background: transparent;
+        box-shadow: 2px 2px 10px #00000000;
+    }
 
-.quick{
-    width: 100%;
-    max-width: 1000px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    border: 1px solid #3333336b;
-    border-radius: 10px;
-}
-
-.quick .header{
-    width: 100%;
-    border-bottom: 1px solid #3333336b;
-    padding: 10px;
-}
-
-.quick .header h1{
-    font-size: 1.3em;
-    font-family: "Istok Web", sans-serif;
-    font-weight: 700px;
-}
-
-.quick .access{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 30px;
-}
-
-.quick .access .accesses{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    background-color: #fff;
-    box-shadow: 2px 2px 10px #00000015;
-    padding: 10px 18px;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-.quick .access .accesses:hover{
-    transform: scale(1.03);
-}
-
-.quick .access .accesses i{
-    font-size: 1em;
-    padding: 10px;
-    background-color: rgba(25, 73, 231, 0.568);
-    border-radius: 50%;
-}
-
-.quick .access .accesses h1{
-    font-size: 1em;
-    font-family: "quicksand", sans-serif;
-    font-weight: 600;
-}
-
-.transactions{
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 30px;
-}
-
-.transactions h1{
-    font-size: 1.5em;
-    font-family: "Istok web", sans-serif;
-    font-weight: 700px;
-}
-
-.all{
-    width: 100%;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
-}
-
-.all .all-line{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-}
-
-.all .all-line .info{
-    width: 100%;
-    background-color: rgba(0, 0, 255, 0.068);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 12px;
-    border-radius: 8px;
-}
-
-.all .all-line .info .mouse{
-    display: flex;
-    gap: 10px;
-    align-items: center;
-}
-
-.all .all-line .info .mouse i{
-    font-size: 1em;
-    padding: 10px;
-    background-color: #fff;
-    border-radius: 50%;
-}
-
-.all .all-line .info .mouse h1{
-    font-size: 1.1em;
-    font-family: "quicksand", sans-serif;
-}
-
-.all .all-line .info h2{
-    font-size: 1.1em;
-    font-weight: 900;
-    font-family: "quicksand", sans-serif;
-
-}
-
-.all .all-line .details{
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    gap: 10px;
-    background-color: rgba(35, 68, 216, 0.938);
-    padding: 12px;
-    border-radius: 8px;
-    transition: all 0.3s ease;
-}
-
-.all .all-line .details:hover{
-    transform: scale(1.03);
-}
-
-.all .all-line .details i{
-    padding: 10px;
-    font-size: 1em;
-    background-color: #fff;
-    border-radius: 50%;
-}
-
-.all .all-line .details p{
-    font-size: 1em;
-    color: #fff;
-    font-family: "lato", sans-serif;
 }
 
 footer{
