--- a/style.css
+++ b/style.css
@@ -341,7 +341,7 @@ body{
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 30px;
+    padding: 20px 10px;
 }
 
 .transactions h1{
@@ -352,10 +352,10 @@ body{
 
 .all{
     width: 100%;
-    padding: 20px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
     justify-content: center;
     align-items: center;
 }
@@ -426,12 +426,12 @@ body{
 }
 
 .all .all-line .details p{
-    font-size: 1em;
+    font-size: clamp(12px, 2vw, 1em);
     color: #fff;
     font-family: "lato", sans-serif;
 }
 
-@media (max-width: 550px) {
+@media (max-width: 650px) {
     .navbar nav .right ul{
         display: flex;
         flex-direction: column;
@@ -482,6 +482,22 @@ body{
         box-shadow: 2px 2px 10px #00000000;
     }
 
+    .all .all-line{
+        gap: 10px;
+        /* background-color: red; */
+    }
+
+    .all .all-line .details{
+        flex-direction: column;
+        gap: 5px;
+        padding: 7px;
+    }
+
+    .all .all-line .details i{
+        padding: 5px;
+        font-size: 12px;
+    }
+
 }
 
 footer{
@@ -492,13 +508,13 @@ footer{
 footer .foot{
     width: 100%;
     max-width: 1200px;
-    padding: 10px;
+    padding: 15px;
     margin: 0 auto;
 }
 
 footer .foot h1{
-    font-size: 1em;
+    font-size: clamp(12px, 2vw, 1em);
     color: #fff;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: "quicksand", sans-serif;
     text-align: center;
 }
