--- a/style.css
+++ b/style.css
@@ -13,15 +13,7 @@ body{
     margin: 0;
     padding: 0;
     background-color: #fcfcfc;
-}
-
-.container{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
     position: relative;
-    padding: 10px;
 }
 
 .overlay{
@@ -34,6 +26,15 @@ body{
     backdrop-filter: blur(08px);
     z-index: 98;
     display: none;
+}
+
+.container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    padding: 10px;
 }
 
 .navbar{
