--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
 
 .overlay{
     position: absolute;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     top: 0;
     left: 0;
@@ -437,14 +437,18 @@ body{
         position: absolute;
         background-color: #ffffff;
         top: 75px;
-        right: 0;
+        right: -100%;
         width: 65%;
         padding: 20px 0;
-        height: 92vh;
+        height: 93vh;
         z-index: 99;
         border-top-left-radius: 12px;
-        display: none;
+        transition: all 0.3s ease-in-out;
         /* color: #7ce1ff; */
+    }
+
+    .navbar nav .right .links.active{
+        right: 0;
     }
 
     .navbar nav .right ul{
