--- a/style.css
+++ b/style.css
@@ -444,11 +444,13 @@ body{
         z-index: 99;
         border-top-left-radius: 12px;
         transition: all 0.3s ease-in-out;
+        display: none;
         /* color: #7ce1ff; */
     }
 
     .navbar nav .right .links.active{
         right: 0;
+        display: block;
     }
 
     .navbar nav .right ul{
