--- a/style.css
+++ b/style.css
@@ -16,9 +16,9 @@ body{
     position: relative;
 }
 
-html, body.overla{
+/* body.overla{
     overflow: hidden;
-}
+} */
 
 .overlay{
     position: absolute;
@@ -487,6 +487,97 @@ footer .foot h1{
     animation-delay: 0s;
     animation-iteration-count: infinite;
 }
+
+.fill{
+    position: absolute;
+    inset: 0;
+    height: 100vh;
+    display: none;
+    z-index: 100;
+}
+
+.filling{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    padding: 10px;
+}
+
+.filling .deposit{
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
+    width: 100%;
+    max-width: 600px;
+    background-color: #fff;
+    /* padding: 10px; */
+    border-radius: 12px;
+    box-shadow: 2px 2px 10px #0000001f;
+}
+
+.deposit .fillImage{
+    width: 50%;
+    /* height: 100%; */
+    background-image: url(3419259.jpg);
+    /* background-color: green; */
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 12px;
+}
+
+.deposit form{
+    width: 50%;
+    /* background-color: red; */
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 15px;
+}
+
+.deposit form label{
+    font-size: 1em;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 600;
+}
+
+.deposit form label input{
+    padding: 8px;
+    width: 95%;
+    margin: 5px;
+    border: 1px solid rgb(0, 44, 241);
+    border-radius: 5px;
+    outline: none;
+    font-family: "lato", sans-serif;
+}
+
+.deposit form label input.green{
+    border: 2px solid green;
+    margin-bottom: 20px;
+}
+
+.deposit form button{
+    width: 95%;
+    margin: 0 auto;
+    padding: 10px;
+    background-color: pink;
+    border: none;
+    outline: none;
+    border-radius: 244px;
+    color: #000000;
+    font-size: .8em;
+    font-family: "quicksand", sans-serif;
+    font-weight: 600;
+    text-transform: capitalize;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+.deposit form button:hover{
+    transform: scale(1.03);
+}
+
 
 @keyframes loader {
     0%{
