--- a/style.css
+++ b/style.css
@@ -536,6 +536,14 @@ footer .foot h1{
     padding: 15px;
 }
 
+.deposit form h1{
+    color: rgb(0, 44, 241);
+    font-family: "quicksand", sans-serif;
+    font-size: 1.1em;
+    text-align: center;
+    padding: 10px;
+}
+
 .deposit form label{
     font-size: 1em;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
