--- a/style.css
+++ b/style.css
@@ -33,6 +33,25 @@ body{
     display: none;
 }
 
+#errorMsg{
+    position: absolute;
+    text-align: center;
+    top: 20px;
+    left: 0;
+    right: 0;
+    color: #f00;
+    font-family: "Quicksand", sans-serif;
+    font-size: .9em;
+    font-weight: 700;
+    z-index: 200;
+    width: fit-content;
+    margin: 0 auto;
+    padding: 10px 15px;
+    border-radius: 50px;
+    background-color: #fff;
+    display: none;
+}
+
 .container{
     width: 100%;
     height: 100%;
